Home page has been cretaed and some updation has been done

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -24,7 +24,7 @@ p {
 .img-fluid {
   max-width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 10px
 }
 
 /* Navbar */
@@ -50,7 +50,7 @@ p {
 
 /* Footer */
 footer {
-  background-color: #222;
+  background-color: #716a6a;
   color: #eee;
   padding: 30px 0;
   font-size: 0.95rem;
@@ -93,6 +93,18 @@ footer .bi:hover {
 
 #topBtn:hover {
   background-color: #555;
+}
+.footer-text{
+    color:white;
+    font-style: normal;
+    
+}
+
+/* Brand Text */
+.brand-text {
+  color:white;
+  
+  font-style:italic
 }
 
 /* Responsive Adjustments */
